[develop] Remove 'hide title' field. Fix display of 'Getting started' on tablets.

--- a/health/sass/components/_paragraphs.scss
+++ b/health/sass/components/_paragraphs.scss
@@ -1,11 +1,3 @@
-.paragraphs-item-para-links {
-  &.hide-title {
-    h2 {
-      display: none;
-    }
-  }
-}
-
 .paragraphs-item-para-contact {
   text-align: center;
   p {
